amber.css
  .container::after, .row::after {
    content: "";
    clear: both;
    display: table;
    max-width: 1150px;
  }
 
  .div {
    text-align: center;
    color: black;
  }
  .content {
    max-width: 1150px;
    margin: auto;
    float: center;
  }
  
  * {
    box-sizing: border-box;
  }

  .column {
    float: left;
    width: 50%;
    padding: 10px ;
    height: 300px;
  }
  
  .row:after {
    content: "";
    display: table;
    clear: both;
  }
  
 img {
   width: 100%;
   height: 500px;
 }

h1 {
  text-align: center;
}

nav {
  text-align: center;
}

.space{
  margin-top: 600px;
}

h2 {
  text-align: center;
}

p{
  text-align: center;
}

body {
  background-color: #FFFF66;
}
.card{
  background-color: black;
  color: white;
}

.durations {
  outline-width: thick;
}

.space2 {
  margin-top: 910000px;
}

